...
            text = "Toggle the switch to enable/disable state change lock."
        )

        Spacer(modifier = Modifier.size(16.dp))

        Switch(
            modifier = Modifier.testTag("toggle"),
            checked = lockStateChange,
            onCheckedChange = { lockStateChange = it }
        )
    }

    NavBackHandler(enabled = lockStateChange) {
...
