...
                Spacer(modifier = Modifier.height(10.dp))

                Button(
                    modifier = Modifier.fillMaxWidth(),
                    onClick = onBackToRootClicked
                ) {
                    Text(text = "Go back to root")
                }
            }
        }
    }
}

...
